--- a/paginas/3salud.html
+++ b/paginas/3salud.html
@@ -2,24 +2,26 @@
 <html lang="en">
 
 <head>
-  <title>Noticias</title>
+  <title>Ods</title>
 
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Roboto+Mono:300,400,500" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="images/icono.png">
 
   <link rel="stylesheet" href="../fonts/icomoon/style.css" />
   <link rel="stylesheet" href="../css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css" />
   <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+
+
 </head>
 
 <body>
 
-  <div class="contenido">
+  <section class="contenido">
     <!-- cabecera-- -->
-    <div class="barra-cab bg-white">
+    <header class="barra-cab bg-white">
       <div class="barra-superior">
 
 
@@ -48,10 +50,9 @@
 
 
       </div>
-    </div>
+    </header>
 
-
-    <div class="barra-cab bg-white">
+    <section class="barra-cab bg-white">
       <div class="container">
         <div class="barra-menu bg-light">
           <div class="py-1">
@@ -101,238 +102,178 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!--fin de  cabecera-- -->
 
 
-    <div id="crr_imagenes" class="carousel slide" data-ride="carousel">
+    <section class="container">
 
-      <ul class="carousel-indicators">
-        <li data-target="#crr_imagenes" data-slide-to="0" class="active"></li>
-        <li data-target="#crr_imagenes" data-slide-to="1"></li>
-      </ul>
+      <div class="row mb-5">
 
-      <div class="crr_imagenes_tamanio">
-        <div class="carousel-item active">
-          <img src="../images/hero_bg_2.jpg" alt="">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>NUESTROS SERVICIOS</h5>
+        <article class="estio-seccion">
+          <div class="container">
+            <div class="row align-items-center">
+
+              <div class="col-md-12 col-lg-6 mr-auto order-2 ml-5">
+                <img src="../images/objetivos/3.jpg" alt="Image" class="img-fluid">
+              </div>
+
+              <div class="col-md-12 col-lg-5 mb-5 mb-lg-0 order-1">
+                <h2 class="mb-3 text-uppercase">Objetivo 3
+                  <strong class="letra-negra font-weight-bold">SALUD Y BIENESTAR</strong>
+                </h2>
+
+                <p class="mb-4 text-justify">
+                  Hemos logrado grandes avances en la lucha contra varias de las principales causas de muerte y
+                  enfermedades. La esperanza de vida ha aumentado drásticamente, las tasas de mortalidad infantil y
+                  materna han disminuido, hemos cambiado el curso del VIH y la mortalidad por la malaria se ha reducido
+                  a la mitad.
+                </p>
+
+                <p class="mb-4 text-justify">
+                  La buena salud es esencial para el desarrollo sostenible y la Agenda 2030 refleja la complejidad y la
+                  interconexión de ambos. Toma en cuenta la ampliación de las desigualdades económicas y sociales, la
+                  rápida urbanización, las amenazas para el clima y el medio ambiente, la lucha continua contra el VIH y
+                  otras enfermedades infecciosas, y los nuevos problemas de salud, como las enfermedades no
+                  transmisibles. La cobertura universal de salud será integral para lograr el ODS 3, terminar con la
+                  pobreza y reducir las desigualdades. Las prioridades de salud global emergentes que no se incluyen
+                  explícitamente en los ODS, incluida la resistencia a los antimicrobianos, también demandan acción.
+                </p>
+
+                <p class="mb-4 text-justify">
+                  Sin embargo, el mundo no está bien encaminado para alcanzar los ODS relacionados con la salud. El
+                  progreso ha sido desigual, tanto entre países como dentro de ellos. Sigue habiendo una discrepancia de
+                  31 años entre los países con la esperanza de vida más corta y la más larga. Si bien algunos han
+                  logrado avances impresionantes, los promedios nacionales ocultan el hecho de que algunas poblaciones,
+                  grupos y comunidades se están quedando atrás. Los enfoques multisectoriales, basados ​​en los derechos
+                  y con perspectiva de género, son esenciales para abordar las desigualdades y asegurar una buena salud
+                  para todas las personas.
+                </p>
+
+
+              </div>
+
+            </div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img src="../images/hero_bg_1.jpg" alt="">
-        </div>
+        </article>
+
+
+        <article class="estio-seccion">
+          <div class="container">
+            <div class="row align-items-center">
+
+
+              <div class="col-sm-12 ">
+                <h2 class="mb-3 text-uppercase">
+                  <strong class="letra-negra font-weight-bold">Metas del objetivo</strong>
+                </h2>
+
+
+                <ul class="mb-4 text-justify">
+                  <li>Para 2030, reducir la tasa mundial de mortalidad materna a menos de 70 por cada 100.000 nacidos vivos.</li>
+                  <li>Para 2030, poner fin a las muertes evitables de recién nacidos y niños menores de 5 años, con el objetivo de que todos los países reduzcan la mortalidad neonatal al menos a 12 por cada 1.000 nacidos vivos y la mortalidad de menores de 5 años al menos a 25 por cada 1.000 nacidos vivos. </li>
+                  <li>Para 2030, poner fin a las epidemias de SIDA, tuberculosis, malaria y enfermedades tropicales desatendidas y combatir la hepatitis, las enfermedades transmitidas por el agua y otras enfermedades transmisibles.</li>
+                  <li>Para 2030, reducir en un tercio la mortalidad prematura por enfermedades no transmisibles mediante la prevención y el tratamiento y promover la salud mental y el bienestar.</li>
+                </ul>
+              </div>
+
+            </div>
+          </div>
+        </article>
+
+
+
 
       </div>
+    </section>
 
-      <a class="carousel-control-prev" href="#crr_imagenes" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a class="carousel-control-next" href="#crr_imagenes" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
+  </section>
+
+  <hr>
+  <footer class="pie-de-pagina">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-6 col-md-4 col-lg-8 mb-5 mb-lg-0">
+              <h3 class="encabezado-de-pie mb-4 text-primary">Nosotros</h3>
+              <p class="text-justify">
+                Como agencia líder de las Naciones Unidas en desarrollo internacional, el PNUD trabaja
+                en 170 países y territorios para erradicar la pobreza y reducir la desigualdad. Ayudamos
+                a los países a desarrollar políticas, habilidades de liderazgo, habilidades de
+                asociación, capacidades institucionales y a desarrollar resiliencia para lograr los
+                Objetivos de Desarrollo Sostenible. Nuestro trabajo se concentra en tres áreas de
+                enfoque; desarrollo sostenible, gobernanza democrática y consolidación de la paz, y
+                resiliencia climática y ante desastres.
+              </p>
+              <p>
+                <a href="Nosotros.html" class="btn btn-primary pill text-white px-4">Leer Mas</a>
+              </p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-4 mb-5 mb-lg-0">
+              <h3 class="encabezado-de-pie mb-4 text-primary">Menu</h3>
+              <ul class="list-unstyled">
+                <li><a href="../Servicios.html">Servicios</a></li>
+                <li><a href="../Noticias.html">Noticias</a></li>
+                <li><a href="../Contacto.html">Contacto</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3">
+          <div class="row ">
+            <div class="col-md-12">
+              <h3 class="encabezado-de-pie mb-4 text-primary">Direccion</h3>
+            </div>
+            <div class="col-md-6">
+              <p>
+                Victor Manuel Rendón,
+                <br />
+                Guayaquil 090313
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3">
+          <div class="row mb-4">
+            <div class="col-md-12">
+              <h3 class="encabezado-de-pie mb-4 text-primary">Contacto</h3>
+            </div>
+            <div class="col-md-6">
+              Tel. + (593) 985396241 <br />
+              Email. correo.ug.cambiar@ug.edu.ec
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="encabezado-de-pie mb-4 text-primary">
+                Redes Sociales
+              </h3>
+            </div>
+            <div class="col-md-12">
+              <p>
+                <a href="https://twitter.com/home?lang=es" class="p-2 pl-0"><span class="icon-twitter"></span></a>
+                <a href="https://www.facebook.com/" class="p-2 pl-0"><span class="icon-facebook"></span></a>
+                <a href="https://www.linkedin.com/login/es" class="p-2 pl-0"><span class="icon-linkedin"></span></a>
+                <a href="https://www.instagram.com/" class="p-2 pl-0"><span class="icon-instagram"></span></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
 
-    <div class="estio-seccion">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="post-entry bg-white">
-              <div class="image">
-                <img src="../images/img_1.jpg" alt="Image" class="img-fluid">
-              </div>
-              <div class="text p-4">
-                <h2 class="h5 letra-negra"><a href="#">Nueva area recreativa</a></h2>
-                <span class="text-uppercase date d-block mb-3"><small> Sep 25, 2018</small></span>
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex
-                  corrupti perspiciatis.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="post-entry bg-white">
-              <div class="image">
-                <img src="../images/img_2.jpg" alt="Image" class="img-fluid">
-              </div>
-              <div class="text p-4">
-                <h2 class="h5 letra-negra"><a href="#">Nuevos implementos de Yoga</a></h2>
-                <span class="text-uppercase date d-block mb-3"><small>By Colorlib &bullet; Sep 25, 2018</small></span>
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex
-                  corrupti perspiciatis.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="post-entry bg-white">
-              <div class="image">
-                <img src="../images/img_3.jpg" alt="Image" class="img-fluid">
-              </div>
-              <div class="text p-4">
-                <h2 class="h5 letra-negra"><a href="#">Nuevo espacio para correr</a></h2>
-                <span class="text-uppercase date d-block mb-3"><small> Sep 30, 2018</small></span>
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex
-                  corrupti perspiciatis.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="post-entry bg-white">
-              <div class="image">
-                <img src="../images/img_4.jpg" alt="Image" class="img-fluid">
-              </div>
-              <div class="text p-4">
-                <h2 class="h5 letra-negra"><a href="#">Nuevas Pesas</a></h2>
-                <span class="text-uppercase date d-block mb-3"><small> Oct 10, 2018</small></span>
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex
-                  corrupti perspiciatis.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="post-entry bg-white">
-              <div class="image">
-                <img src="../images/img_1.jpg" alt="Image" class="img-fluid">
-              </div>
-              <div class="text p-4">
-                <h2 class="h5 letra-negra"><a href="#">Lorem ipsum dolor sit amet</a></h2>
-                <span class="text-uppercase date d-block mb-3"><small> Sep 25, 2018</small></span>
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex
-                  corrupti perspiciatis.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="post-entry bg-white">
-              <div class="image">
-                <img src="../images/img_2.jpg" alt="Image" class="img-fluid">
-              </div>
-              <div class="text p-4">
-                <h2 class="h5 letra-negra"><a href="#">Lorem ipsum dolor sit amet</a></h2>
-                <span class="text-uppercase date d-block mb-3"><small> Sep 25, 2018</small></span>
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex
-                  corrupti perspiciatis.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="post-entry bg-white">
-              <div class="image">
-                <img src="../images/img_3.jpg" alt="Image" class="img-fluid">
-              </div>
-              <div class="text p-4">
-                <h2 class="h5 letra-negra"><a href="#">Lorem ipsum dolor sit amet</a></h2>
-                <span class="text-uppercase date d-block mb-3"><small> Sep 25, 2018</small></span>
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex
-                  corrupti perspiciatis.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="post-entry bg-white">
-              <div class="image">
-                <img src="../images/img_4.jpg" alt="Image" class="img-fluid">
-              </div>
-              <div class="text p-4">
-                <h2 class="h5 letra-negra"><a href="#">Lorem ipsum dolor sit amet</a></h2>
-                <span class="text-uppercase date d-block mb-3"><small> Sep 25, 2018</small></span>
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex
-                  corrupti perspiciatis.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="post-entry bg-white">
-              <div class="image">
-                <img src="../images/img_1.jpg" alt="Image" class="img-fluid">
-              </div>
-              <div class="text p-4">
-                <h2 class="h5 letra-negra"><a href="#">Lorem ipsum dolor sit amet</a></h2>
-                <span class="text-uppercase date d-block mb-3"><small>Sep 25, 2018</small></span>
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex
-                  corrupti perspiciatis.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <footer class="pie-de-pagina">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-7">
-              <div class="row">
-                <div class="col-6 col-md-4 col-lg-8 mb-5 mb-lg-0">
-                  <h3 class="encabezado-de-pie mb-4 text-primary">Nosotros</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Repellat quos rem ullam, placeat amet sint vel impedit
-                    reprehenderit eius expedita nemo consequatur obcaecati
-                    aperiam, blanditiis quia iste in! Assumenda, odio?
-                  </p>
-                  <p>
-                    <a href="../Nosotros.html" class="btn btn-primary pill text-white px-4">Leer Mas</a>
-                  </p>
-                </div>
-                <div class="col-6 col-md-4 col-lg-4 mb-5 mb-lg-0">
-                  <h3 class="encabezado-de-pie mb-4 text-primary">Menu</h3>
-                  <ul class="list-unstyled">
-                    <li><a href="../Servicios.html">Servicios</a></li>
-                    <li><a href="../Noticias.html">Noticias</a></li>
-                    <li><a href="../Contacto.html">Contacto</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-5">
-              <div class="row mb-5">
-                <div class="col-md-12">
-                  <h3 class="encabezado-de-pie mb-4 text-primary">Direccion</h3>
-                </div>
-                <div class="col-md-6">
-                  <p>
-                    Alborada 6ta etapa <br />
-                    Diagonal al Rc Norte
-                  </p>
-                </div>
-                <div class="col-md-6">
-                  Tel. + (593) 995463005 <br />
-                  Email. fullgym@hotmail.com
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-md-12">
-                  <h3 class="encabezado-de-pie mb-4 text-primary">
-                    Redes Sociales
-                  </h3>
-                </div>
-                <div class="col-md-12">
-                  <p>
-                    <a href="https://twitter.com/home?lang=es" class="p-2 pl-0"><span class="icon-twitter"></span></a>
-                    <a href="https://www.facebook.com/" class="p-2 pl-0"><span class="icon-facebook"></span></a>
-                    <a href="https://www.linkedin.com/login/es" class="p-2 pl-0"><span class="icon-linkedin"></span></a>
-                    <a href="https://www.instagram.com/" class="p-2 pl-0"><span class="icon-instagram"></span></a>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="../js/form.js"></script>
+  </footer>
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-        <script src="js/form.js"></script>
-      </footer>
 </body>
 
 </html>
